Actions
Bug #7418
closedpfexec and the case of the missing error message
Start date:
2016-09-27
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
pfexec doesn't currently give any useful error message when pfexecd is unavailable (e.g. in the joyent-minimal brand). Instead it just execs the command you asked for as your current user with no elevation. Really it should print something out.
The man page should probably be updated, too.
Note many commands today silently work in this vein because they never required the privileges, so we cannot error out the commands.
Updated by Electric Monk over 5 years ago
- Status changed from New to Closed
git commit 7d8cb570f5834dc4f535a463c1c0839a57ada912
commit 7d8cb570f5834dc4f535a463c1c0839a57ada912 Author: Alex Wilson <alex.wilson@joyent.com> Date: 2016-10-15T22:30:23.000Z 7418 pfexec and the case of the missing error message Reviewed by: Joshua M. Clulow <jmc@joyent.com> Reviewed by: Patrick Mooney <patrick.mooney@joyent.com> Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Approved by: Dan McDonald <danmcd@omniti.com>
Actions